--- a/public/frontendassets/css/style.css
+++ b/public/frontendassets/css/style.css
@@ -44,6 +44,10 @@ p a:hover {    text-decoration: none;color:#000000;}
 .navbar a{padding: 0px 0px; font-size: 15px;}
 .navbar ul li{padding-left: 0px; padding-right: 0px;}
 .navbar ul li{padding-top: 5px;padding-bottom: 5px;margin-bottom: 0px; margin-right: 30px; }
+
+.errmsg{ color:red; margin-top: -14px; }
+
+
 .navbar ul li:last-child{margin-right: 0;}
 
 
@@ -65,7 +69,57 @@ p a:hover {    text-decoration: none;color:#000000;}
 #menu-main-menu li{position: relative;}
 #menu-main-menu li.current_page_item:after, #menu-main-menu li:hover:after{content: ""; width: 100%; display: block; height: 2px; position: absolute; bottom: 0px; background-color: #000000;}
 
+.student-profile-info {
+    text-align: center;
+    margin: 30px 0px 30px 0px;
+}
 
+.student-profile-info .profile-image {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.student-profile-info h4 {
+    margin-top: 10px;
+    color: var(--color-1);
+    font-size: 22px;
+    font-weight: 600;
+	margin-bottom: 0;
+}
+
+.Dashboard-left-menu li i{ margin-right:8px;}
+
+.dashboard-right {
+/*    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
+    padding: 50px;*/
+
+    
+}
+
+.dashboard-right h2{ margin-bottom:16px; }
+
+.dashboardmain .card{ box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2); background-color:#fff; padding:10px; margin-bottom:15px; border-radius:6px; }
+.dashboardmain .card p{  }
+.dashboard-sidebar{ border-radius:6px; }
+.profile-img {
+    float: left;
+    width: 85px;
+    border-radius: 50%;
+    margin-right: 25px;
+}
+.profile-img img {
+    border-radius: 50%;
+    height: 85px;
+}
+.setting-card .form-control-4{ margin-bottom:15px; }
+
+.dashboard-right .btn{ border:0; cursor:pointer; }
+.change-pass .form-control-4 {
+    margin-bottom: 15px;
+}
 
 
 
@@ -854,3 +908,512 @@ header .header-topbar a{font-size: 13px;  }
     
 }
 
+
+.reg-top-box{box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    padding: 10px;
+    margin-bottom: 15px; text-align: center;
+    border-radius: 6px; border: 1px solid transparent;}
+
+    .reg-top-box:focus{ box-shadow: 0 3px 12px rgb(167 12 12 / 20%); border:1px solid #000; }
+
+.reg-top-box h4{ font-size:19px; margin-bottom:5px; font-weight:400; }
+.reg-top-box h5{ font-size:17px; font-weight:400; }
+.reg-top-box ul li{ text-align:left; font-size:15px; line-height:20px; }
+.reg-top-box.active{ box-shadow: 0 3px 12px rgb(167 12 12 / 20%); border:1px solid red; }
+.reg-top-box:hover{ box-shadow: 0 3px 12px rgb(167 12 12 / 20%); border:1px solid red;  }
+.regtop11 h3{ margin-bottom:0; }
+
+
+.wrapper-progressBar {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  margin-bottom:30px;
+}
+
+.progressBar {
+    width: 698px;
+    margin-left: 249px;
+}
+.progressBar li {
+    list-style-type: none;
+    float: left;
+    width: 33%;
+    position: relative;
+    text-align: center;
+}
+
+.progressBar li:before {
+    content: " ";
+    line-height: 30px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ddd;
+    display: block;
+    text-align: center;
+    margin: 0 auto 10px;
+    background-color: white
+}
+
+.progressBar li:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ddd;
+    top: 15px;
+    left: -50%;
+    z-index: -1;
+}
+
+.progressBar li:first-child:after {
+    content: none;
+}
+
+.progressBar li.active {
+    color: #149e43;
+}
+
+.progressBar li.active:before {
+    border-color: #149e43;
+    background-color: #149e43;
+    content:"\2713";
+    color:white;
+}
+
+.progressBar li.active:after {
+    background-color: #149e43;
+}
+
+.btn{}
+
+
+
+
+
+
+.switch {
+    position: relative;
+    display: block;
+    width: 123px;
+    height: 37px;
+    margin: 0 auto 30px;
+}
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 6px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2ab934;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(55px);
+  -ms-transform: translateX(55px);
+  transform: translateX(55px);
+  left: 36px;
+}
+
+
+.offers {
+    position: relative;
+    text-align: center;
+    background: #fff;
+    margin: 10px;
+    width: 337px;
+    height: auto;
+    top: 0;
+    border: 1px solid #eaeaea;
+    z-index: 1;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out; 
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+}
+
+.offers .btn1 {
+    margin: 15px 0 15px 0;
+    cursor: pointer;
+    line-height: 42px;
+    font-size: 20px;
+    /* border-radius: 5px; */
+}
+
+.offers:hover {
+    position: relative;
+    top: -5px;
+    box-shadow: 0px 14px 6px 0px #0000004d;
+}
+.offers:nth-child(1) {
+    border-top: 3px solid #5ac9e7;
+    border-bottom: 3px solid #5ac9e7;
+    box-shadow: 0 0 10px 0px #0000001c;
+}
+
+
+.offers:nth-child(2) {
+    border-top: 3px solid #2cceb9;
+  border-bottom: 3px solid #2cceb9;
+    box-shadow: 0 0 10px 0px #0000001c;
+}
+
+.offers:nth-child(3) {
+    border-top: 3px solid #2296c5;
+  border-bottom: 3px solid #2296c5;
+    box-shadow: 0 0 10px 0px #0000001c;
+}
+.offers:nth-child(4) {
+    border-top: 3px solid #ec4235;
+    border-bottom: 3px solid #ec4235;
+    box-shadow: 0 0 10px 0px #0000001c;
+}
+
+
+.offers:nth-child(2) h3{
+    /*margin-top: 20px;*/
+}
+
+.offers:nth-child(2):hover {
+    box-shadow: 0px 14px 6px 0px #0000004d;
+}
+
+
+.offers h2{ font-size:28px; line-height: 65px;
+    font-weight: 900;}
+
+.container6 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* align-items: center; */
+    z-index: 1;
+}
+.title {
+    text-align: center;
+    margin: 10px auto 50px auto;
+    z-index: 1;
+    font-size: 40px;
+}
+
+.btn1 {
+    background: rgb(247, 107, 12);
+    background: linear-gradient(90deg, rgba(247, 107, 12, 1) 0%, rgba(250, 137, 8, 1) 44%, rgba(255, 196, 2, 1) 100%);
+    display: inline-block;
+    line-height: 57px;
+    padding: 0 34px;
+    color: #fff;
+    font-size: 24px;
+    border: 0;
+}
+
+.on {
+  display: none;
+}
+
+.on, .off {
+  color: white;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  font-size: 16px;
+  user-select:none;
+}
+
+input:checked + .slider .on {
+  display: block;
+}
+
+input:checked + .slider .off {
+  display: none;
+}
+
+/*--------- END --------*/
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.signup-next{ float: right;
+    margin-top: -20px;}
+
+
+    .subs-con .offers {
+    width: 269px;
+    padding: 0;
+}
+.offers{ border-top:0 !important;}
+.offers h2{
+    font-size: 28px;
+    background: #000;
+    color: #fff;
+    background-color: #40cbb4;
+  margin-bottom: 15px;
+}
+
+.subs-con .content{     padding: 0 10px;
+    text-align: left;
+    font-size: 16px;}
+
+.active-plan-section p b{     background: #F76A0C;
+    background: linear-gradient(to right, #F76A0C 0%, #FFC402 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: "Montserrat", serif; font-weight: 600;}
+
+.h1{ color: #232631;
+    font-size: 35px;
+    line-height: 45px;
+    font-weight: 900;}
+
+.offers:nth-child(2) h2{ background-color: #1d95d2;}
+.offers:nth-child(3) h2{ background-color: #ffc20b;}
+.offers:nth-child(4) h2{ background-color: #F5A623;}
+
+.price small{ display:block; color:#000; font-size:18px;}
+.price {
+    color: #40cbb4;
+    line-height: 32px;
+    margin-bottom: 11px;
+  font-size:30px;
+}
+
+.price .offer{ background: #F76A0C;
+    font-size: 18px;
+    line-height: 19px;
+    position: absolute;
+left: -10px;
+    top: -15px;
+    width: 55px;
+    height: 55px;
+    display: flex
+;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;}
+
+.offers:nth-child(2) h3.price{ color: #1d95d2;}
+.offers:nth-child(3) h3.price{ color: #ffc20b;}
+.offers:nth-child(4) h3.price{ color: #F5A623;}
+
+.dashboard-right p {
+    font-size: 17px;
+}
+
+.container-subcrip{ padding-top:20px;}
+
+.container6 .content {
+    padding: 0 10px;
+    text-align: left;
+    font-size: 16px;
+}
+
+
+.offers .btn{ border:0; cursor:pointer; }
+
+.container-subcrip .btn{ border:0; }
+
+
+
+.accordion-container{
+  position: relative;
+  max-width: 1000px;
+      margin: 0 auto;
+}
+.accordion-container > h2{
+  margin-bottom: 20px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #ddd;
+}
+.set{
+  position: relative;
+  width: 100%;
+  height: auto;
+  background-color: #f5f5f5;
+}
+.set > a{
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #555;
+  font-weight: 600;
+  border-bottom: 1px solid #ddd;
+  -webkit-transition:all 0.2s linear;
+  -moz-transition:all 0.2s linear;
+  transition:all 0.2s linear;
+}
+.set > a i{
+  float: right;
+  margin-top: 2px;
+}
+.set > a.active{
+  background-color:#149e43;
+  color: #fff;
+}
+.accordion-container .content{
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+  display:none;
+}
+.content p{
+  padding: 10px 15px;
+  margin: 0;
+  color: #333;
+}
+
+.box {
+  position: relative;
+  background: #ffffff;
+  width: 100%;
+}
+
+.box-header {
+  color: #444;
+  display: block;
+  padding: 10px;
+  position: relative;
+  border-bottom: 1px solid #f4f4f4;
+  margin-bottom: 24px;
+  padding-bottom: 30px;
+}
+
+.box-tools {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+}
+
+.dropzone-wrapper {
+  border: 2px dashed #91b0b3;
+  color: #92b0b3;
+  position: relative;
+  height: 150px;
+}
+
+.dropzone-desc {
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    width: 40%;
+    top: 50px;
+    font-size: 32px;
+    color: #000;
+}
+
+.dropzone,
+.dropzone:focus {
+  position: absolute;
+  outline: none !important;
+  width: 100%;
+  height: 150px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.dropzone-wrapper:hover,
+.dropzone-wrapper.dragover {
+  background: #ecf0f5;
+}
+
+.preview-zone {
+  text-align: center;
+}
+
+.preview-zone .box {
+  box-shadow: none;
+  border-radius: 0;
+  margin-bottom: 0;
+}
+
+.dragdrop-container{ margin-bottom:20px; }
+
+.black-btn{ background-color:#343131 ; }
+
+/* dropzone section  */
+.dropzone-wrapper {
+        border: 2px dashed #91b0b3;
+        color: #92b0b3;
+        position: relative;
+        padding: 30px;
+        cursor: pointer;
+        text-align: center;
+        transition: border 0.3s;
+        border-radius: 6px;
+    }
+
+    .dropzone-wrapper.dragover {
+        border-color: #333;
+        background-color: #f0f0f0;
+    }
+
+    .preview-box {
+        position: relative;
+        display: inline-block;
+        margin: 10px;
+    }
+
+    .preview-box img {
+        width: 150px;
+        height: auto;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+
+    .remove-image {
+        position: absolute;
+        top: -8px;
+        right: -8px;
+        background: red;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        font-size: 14px;
+        width: 24px;
+        height: 24px;
+        line-height: 20px;
+        text-align: center;
+        cursor: pointer;
+    }
