--- a/public/frontendassets/css/custom.css
+++ b/public/frontendassets/css/custom.css
@@ -57,3 +57,54 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 
+/* Ckeditor modify  */
+.ck-editor__editable p {
+        margin-top: 0.5em !important;
+        margin-bottom: 0.5em !important;
+    }
+
+/* Toggle Switch  */
+.my-toggle {
+        position: relative;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+    }
+
+    .my-toggle input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+    .my-slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        transition: .3s;
+        border-radius: 34px;
+    }
+
+    .my-slider:before {
+        content: "";
+        position: absolute;
+        height: 14px;
+        width: 14px;
+        left: 3px;
+        bottom: 3px;
+        background-color: white;
+        transition: .3s;
+        border-radius: 50%;
+    }
+
+    .my-toggle input:checked + .my-slider {
+        background-color: #28a745;
+    }
+
+    .my-toggle input:checked + .my-slider:before {
+        transform: translateX(20px);
+    }
