--- a/public/frontendassets/css/style.css
+++ b/public/frontendassets/css/style.css
@@ -848,8 +848,8 @@ form .frm-col4 {  display: block;  grid-template-columns: unset;    gap: 0; }
 
 @media screen and (max-width:520px){
     
-.header-topbar .one{-ms-flex: 0 0 40%;  flex: 0 0 40%;  max-width: 40%;}
-.header-topbar .two{-ms-flex: 0 0 60%;  flex: 0 0 60%;  max-width: 60%;}
+.header-topbar .one{-ms-flex: 0 0 40%;  flex: 0 0 51%;  max-width: 51%;}
+.header-topbar .two{-ms-flex: 0 0 60%;  flex: 0 0 49%;  max-width: 49%;}
 .burger {    right: -5px !important;top: 5px;  }
 header .header-topbar a{font-size: 13px;  }
 .header-top-left a {  padding: 15px 8px;}
@@ -1550,7 +1550,7 @@ left: -10px;
     display: none;
     position: absolute;
     top: 29px;
-    width: 200px;
+    width: 186px;
     right: 0;
     z-index: 9;
     background-color: #245d42;
@@ -1570,3 +1570,54 @@ left: -10px;
 .filter-div ul li a.active, .filter-div ul li a:hover{ background-color: #149e43;  }
 
 .sort-button-pan{ position:relative; }
+.saleSlider .slick-next {
+    right: 40.2%;
+    bottom: -20px;
+    top: inherit;
+}
+
+.saleSlider .slick-prev {
+    left: 40%;
+    bottom: -20px;
+    top: inherit;
+}
+
+.saleSlider .slick-prev, .saleSlider .slick-next{ z-index:99; }
+
+.saleSlider button.slick-next:before {
+    content: "";
+    background-image: url(../image/arrow-right.png) !important;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 22px;
+}
+
+.saleSlider button.slick-prev:before {
+    content: "";
+    background-image: url(../image/arrow-leftt.png) !important;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 22px;
+}
+
+.saleSlider button.slick-arrow:before {
+    /* font-size: 30px !important; */
+    line-height: 16px;
+    height: 45px !important;
+    width: 45px !important;
+    border-radius: 50%;
+    display: inline-block;
+    line-height: 49px;
+    opacity: 1 !important;
+}
+
+.proSearchtabCont input[type="text"] {
+    background-color: #fff;
+    border-radius: 30px;
+    font-size: 18px;
+    color: #9f9e9e;
+}
+
+.register-row .errmsg{ margin-top: 0; }
+
+#example  .action{ display:flex; gap:5px;}
